feat: enhance search dialog with keyboard navigation

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -10,10 +10,10 @@ const { alternate, title, showLogo } = siteConfig;
 
 <div
   id="site-header"
-  class={`shadow-text fixed md:backdrop-blur inset-x-0 top-0 z-10 gap-4 py-2.5 text-white select-none md:py-2 ${HEADER_SPACING.outer}`}
+  class={`shadow-text fixed tablet:backdrop-blur inset-x-0 top-0 z-10 gap-4 py-2.5 text-white select-none tablet:py-2 ${HEADER_SPACING.outer}`}
   transition:name="site-header"
 >
-  <div class={`mx-auto flex items-center justify-between md:w-full ${MAX_WIDTH.content} ${HEADER_SPACING.inner}`}>
+  <div class={`mx-auto flex items-center justify-between tablet:w-full ${MAX_WIDTH.content} ${HEADER_SPACING.inner}`}>
     <!-- 移动端菜单按钮 占位符 -->
     <div class="tablet:block hidden size-11">
       <!-- PlaceHolder -->
