refactor: add theme synchronization and cleanup patterns, enhance performance with preconnects and preload for faster loading

--- a/src/components/category/CategoryTitle.astro
+++ b/src/components/category/CategoryTitle.astro
@@ -22,7 +22,7 @@ const Tag = level;
     className,
   )}
 >
-  <a href={href} class="dashed-border border-b group-hover:border-blue group-hover:text-blue">
+  <a href={href} class="dashed-border group-hover:border-blue group-hover:text-blue border-b">
     {title}
   </a>
   <span class={cn('text-[0.8em] text-muted-foreground')}>({count})</span>
