--- a/src/components/layout/HomeSider.astro
+++ b/src/components/layout/HomeSider.astro
@@ -56,7 +56,7 @@ const { prevPost, nextPost } =
       <HomeInfo className={type === HomeSiderType.HOME ? 'pt-18 md:pt-0' : ''} />
     </div>
     <div slot="directory" class="sider-slot" data-slot-type="directory">
-      {type === HomeSiderType.POST && <TableOfContents client:load />}
+      {type === HomeSiderType.POST && <TableOfContents client:load enableNumbering={post?.data.tocNumbering ?? true} />}
     </div>
     <div slot="series" class="sider-slot" data-slot-type="series">
       {type === HomeSiderType.POST && <SeriesPostList client:load posts={seriesPosts} currentPostSlug={post?.slug} />}
