--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -181,7 +181,7 @@ const isPostPage = Astro.url.pathname.startsWith('/post/');
   </head>
   <body>
     <div class="flex min-h-screen flex-col text-black dark:text-white">
-      <Header isPostPage={isPostPage} />
+      <Header isPostPage={isPostPage} tocNumbering={post?.data.tocNumbering ?? true} />
       <main class="relative flex grow flex-col gap-4">
         {(<slot />)}
       </main>
