--- a/src/components/ui/cover/Cover.astro
+++ b/src/components/ui/cover/Cover.astro
@@ -75,7 +75,7 @@ const isDraft = import.meta.env.DEV && draft === true;
     }
   </div>
   <div class="relative -z-10 h-full min-h-[15rem] w-full" transition:persist="page-cover-banner" id="banner-box">
-    <img src="/img/site_header.webp" alt="cover" class="h-full w-full object-cover" />
+    <img src="/img/site_header.webp" alt="cover" decoding="async" class="h-full w-full object-cover" />
   </div>
   <WaveSvg />
 </div>
