--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -42,6 +42,8 @@ const isPostPage = Astro.url.pathname.startsWith('/post/');
     <link rel="dns-prefetch" href="https://ik.imagekit.io" />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net" />
+    <link rel="preconnect" href="https://chinese-font.netlify.app" crossorigin />
+    <link rel="dns-prefetch" href="https://chinese-font.netlify.app" />
 
     <!-- Preload LCP image for faster rendering -->
     <link rel="preload" as="image" href="/img/site_header.webp" fetchpriority="high" />
