--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -18,14 +18,10 @@ const { alternate, title, showLogo } = siteConfig;
 
 <div
   id="site-header"
-  class={`shadow-text fixed tablet:backdrop-blur inset-x-0 top-0 z-10 gap-4 py-2.5 text-white select-none tablet:py-2 px-6 md:px-3`}
+  class={`shadow-text fixed tablet:backdrop-blur inset-x-0 top-0 z-10 gap-4 py-2.5 text-white select-none tablet:py-2 px-6 tablet:pl-3 tablet:pr-0`}
   transition:name="site-header"
 >
-  <div class={`mx-auto flex items-center gap-2 justify-between tablet:w-full px-6 md:pl-0 md:pr-0 ${MAX_WIDTH.content}`}>
-    <!-- 移动端菜单按钮 占位符 -->
-    <div class="tablet:block hidden size-10 shrink-0">
-      <!-- PlaceHolder -->
-    </div>
+  <div class={`mx-auto flex items-center justify-between tablet:w-full px-6 tablet:pl-10 tablet:pr-3 ${MAX_WIDTH.content}`}>
     <!-- Desktop: Always show logo -->
     <a
       transition:persist="page-header-avatar"
@@ -61,6 +57,6 @@ const { alternate, title, showLogo } = siteConfig;
 <!-- 移动端菜单按钮 -->
 <MenuIcon
   client:load
-  className="tablet:flex fixed top-0 left-3 z-52 hidden h-15 transition-transform"
+  className="tablet:flex fixed top-0 left-3 z-52 hidden h-14 transition-transform"
   id="mobile-menu-container"
 />
