--- a/src/components/ui/cover/Cover.astro
+++ b/src/components/ui/cover/Cover.astro
@@ -21,7 +21,7 @@ const readState = readingTime(data?.body ?? '');
 const isDraft = import.meta.env.DEV && draft === true;
 ---
 
-<div class="relative flex h-[60dvh] max-h-[50rem] overflow-hidden">
+<div class="relative flex h-[60dvh] max-h-200 overflow-hidden">
   <div class="absolute inset-0 h-full bg-black/40"></div>
   <div class="absolute inset-0 bottom-[8dvh] flex flex-col items-center justify-center px-5 text-white">
     {
@@ -77,12 +77,13 @@ const isDraft = import.meta.env.DEV && draft === true;
   </div>
   <div class="relative -z-10 h-full min-h-60 w-full" transition:persist="page-cover-banner" id="banner-box">
     <Image
-      src="/img/site_header.webp"
       width={1920}
       height={1080}
+      src="/img/site_header_1920.webp"
       alt="cover"
       class="h-full w-full object-cover"
-      sizes="100vw"
+      sizes="50vw"
+      srcset="/img/site_header_800.webp 800w,/img/site_header_1920.webp 1200w"
     />
   </div>
   <WaveSvg />
