--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,4 @@
 @import './components/post.css';
 @import './components/pagefind.css';
 @import './components/embed.css';
+@import './components/lqip.css';
